--- a/src/main/resources/templates/e_request/creation/create_request(initial).html
+++ b/src/main/resources/templates/e_request/creation/create_request(initial).html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>ASAP World!</title>
+    <title>Hello World!</title>
+    <link href="/assets/temp.css" rel="stylesheet">
 </head>
 <body>
-<h1>Request created</h1>
+<h1>Create request page</h1>
 </body>
 </html>
