Fixed static resources handlers

--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -8,12 +8,12 @@
 		<meta name="description" content="Fullscreen Form Interface: A distraction-free form concept with fancy animations" />
 		<meta name="keywords" content="fullscreen form, css animations, distraction-free, web design" />
 		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<link rel="stylesheet" type="text/css" href="css/cs-select.css" />
-		<link rel="stylesheet" type="text/css" href="css/cs-skin-boxes.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="/assets/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="/assets/css/component.css" />
+		<link rel="stylesheet" type="text/css" href="/assets/css/cs-select.css" />
+		<link rel="stylesheet" type="text/css" href="/assets/css/cs-skin-boxes.css" />
+		<script src="/assets/js/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -101,9 +101,9 @@
 			</div>
 
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/selectFx.js"></script>
-		<script src="js/fullscreenForm.js"></script>
+		<script src="/assets/js/classie.js"></script>
+		<script src="/assets/js/selectFx.js"></script>
+		<script src="/assets/js/fullscreenForm.js"></script>
 		<script>
 			(function() {
 				var formWrap = document.getElementById( 'fs-form-wrap' );
