--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -43,9 +43,9 @@
 						<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3">PR</label>
 							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-								<span><input id="q3b" name="q3" type="radio" value="conversion"/><label for="q3b" class="radio-conversion">Sell things</label></span>
-								<span><input id="q3c" name="q3" type="radio" value="social"/><label for="q3c" class="radio-social">Become famous</label></span>
-								<span><input id="q3a" name="q3" type="radio" value="mobile"/><label for="q3a" class="radio-mobile">Mobile market</label></span>
+								<span><input id="q3b" name="q3" type="checkbox" value="conversion"/><label for="q3b" class="radio-conversion">Facebook</label></span>
+								<span><input id="q3c" name="q3" type="checkbox" value="social"/><label for="q3c" class="radio-social">Viber</label></span>
+								<span><input id="q3a" name="q3" type="checkbox" value="mobile"/><label for="q3a" class="radio-mobile">Telegram</label></span>
 							</div>
 						</li>
 						<li data-input-trigger>
