--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -35,11 +35,15 @@
 							<input class="fs-anim-lower" id="q1" name="q1" type="text" placeholder="Сходить пивасика попить" required/>
 						</li>
 						<li>
-							<label class="fs-field-label fs-anim-upper" for="q2">Дата початку заходу</label>
-							<input class="fs-anim-lower" id="q2" name="q2" type="text" placeholder="23/10/18 12:30" required/>
+							<div>
+								<label class="fs-field-label fs-anim-upper" for="q2">Дата початку заходу</label>
+								<input class="fs-anim-lower" id="q2" name="q2" type="text" placeholder="23/10/18 12:30" required/>
+							</div>
 
-                            <label class="fs-field-label fs-anim-upper" for="q2-2">Дата кінця заходу</label>
-                            <input class="fs-anim-lower" id="q2-2" name="q2-2" type="text" placeholder="24/10/18 14:30" required/>
+                            <div>
+								<label class="fs-field-label fs-anim-upper" for="q2-2">Дата кінця заходу</label>
+								<input class="fs-anim-lower" id="q2-2" name="q2-2" type="text" placeholder="24/10/18 14:30" required/>
+							</div>
 						</li>
 						<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3">PR</label>
