--- a/src/main/resources/templates/e_request/view/uploadfile.html
+++ b/src/main/resources/templates/e_request/view/uploadfile.html
@@ -5,9 +5,10 @@
     <title>Upload file</title>
 </head>
 <body>
-<form action="/e_request/uploadfile" method="post" enctype="multipart/form-data">
+<form action="/e_request/upload_file" method="post" enctype="multipart/form-data">
     <input type="file" name="file" accept="application/msword, text/plain">
     <input type="number" name="userId">
+    <input type="number" name="eventId">
     <input type="submit">
 </form>
 </body>
