--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -53,6 +53,17 @@
 								<span><input id="q3a" name="q3" type="checkbox" value="mobile"/><label for="q3a" class="radio-mobile">Telegram</label></span>
 							</div>
 						</li>
+
+						<li data-input-trigger>
+							<label for="q4" class="fs-field-label fs-anim-upper"></label>
+							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
+								<span><input id="q3d" name="q3-2" type="radio" value=""/><label for="q3d" class="radio-room">Корпус/Аудиторія</label></span>
+								<span><input id="q3e" name="q3-2" type="radio" value=""/><label for="q3e" class="radio-art">КМЦ</label></span>
+								<span><input id="q3f" name="q3-2" type="radio" value=""/><label for="q3f" class="radio-library">Наукова бібліотека</label></span>
+								<span><input id="q3g" name="q3-2" type="radio" value=""/><label for="q3g" class="radio-museum">Музей</label></span>
+							</div>
+						</li>
+
 						<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" data-info="We'll make sure to use it all over">Опис заходу</label>
 							<select class="cs-select cs-skin-boxes fs-anim-lower">
