--- a/src/main/resources/static/css/component.css
+++ b/src/main/resources/static/css/component.css
@@ -791,6 +791,113 @@ button.fs-continue:hover {
 	animation-delay: 0.1s;
 }
 
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: .638em;
+	padding-left: 6em;
+	background: #f5f5f5;
+	height: 90px;
+	color: #000;
+}
+
+.header__profile {
+	display: flex;
+}
+
+.header__profile img {
+	object-fit: contain;
+	border-radius: 50%;
+}
+
+.header__info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	min-width: 150px;
+	padding-left: .313em;
+}
+
+.header__info span:last-child {
+	font-weight: 100;
+}
+
+.info__nickname {
+
+}
+
+.aside {
+	width: 90px;
+	min-width: 90px;
+	height: 100%;
+	padding: .638em;
+	background: #f5f5f5;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.aside a {
+	margin-bottom: 1.125em;
+}
+
+.main {
+	background-color: #fff;
+	color: #000;
+	height: 100%;
+	display: flex;
+}
+
+.main__container {
+	padding: .625em;
+	border: 3px solid #3b3f45;
+	border-radius: 15px;
+}
+
+.main__block {
+	padding: 1.125em;
+}
+
+.container__title {
+	margin-bottom: .625em;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.container__title h3 {
+	margin: 0;
+	font-size: 2em;
+}
+
+.container__timestamp {
+	display: flex;
+	flex-direction: column;
+}
+
+.container__title-name {
+	display: flex;
+	align-items: center;
+}
+
+.status {
+	background: #f5f5;
+	border-radius: 28px;
+	padding: .313em 1.25em;
+	font-weight: 500;
+}
+
+.main__container-text {
+	font-weight: 100;
+	line-height: 29px;
+	letter-spacing: 0.8px;
+}
+
+.main__container-organizators {
+
+}
+
 @-webkit-keyframes animHidePrev {
 	to { opacity: 0; -webkit-transform: translate3d(0,500px,0); }
 }
