--- a/src/main/resources/templates/e_request/request/show.html
+++ b/src/main/resources/templates/e_request/request/show.html
@@ -18,25 +18,25 @@
 	<body>
 		<header class="header">
 			<div class="header__profile">
-				<img src="" alt="">
+				<img src="https://via.placeholder.com/50x50" alt="">
 
-				<div class="header__profile-info">
-					<span class="profile__info-nickname">aligator228</span>
+				<div class="header__info">
+					<span class="info__nickname">aligator228</span>
 
 					<span>Пахвалов Ю.Р.</span>
 				</div>
-
-				<button class="fs-submit">Вийти з акаунту</button>
 			</div>
+
+			<button class="fs-submit">Вийти з акаунту</button>
 		</header>
 
-		<main>
+		<main class="main">
 			<aside class="aside">
 				<a href="javascript:void(0)">Зміни</a>
 				<a href="javascript:void(0)">Інше</a>
 			</aside>
 
-			<div class="main">
+			<div class="main__block">
 				<article class="main__container">
 					<div class="container__title">
 						<h3>Похід за грибами</h3>
@@ -49,8 +49,6 @@
 
 					<div class="container__title">
 						<div class="container__title-name">
-							<h4>Василь</h4>
-
 							<span class="status">розглядається</span>
 						</div>
 
@@ -59,10 +57,9 @@
 
 					<p class="main__container-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
 
-					<div class="main__container-organizators">
+<!--					<div class="main__container-organizators">
 						<span>Організатори:</span>
-
-					</div>
+					</div>-->
 				</article>
 			</div>
 		</main>
