--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -101,22 +101,10 @@
                     <textarea class="fs-anim-lower" id="q7c" name="desc" placeholder="Я очікую..."></textarea>
                 </li>
             </ol><!-- /fs-fields -->
-            <button class="fs-submit" type="submit">Send answers</button>
+            <button class="fs-submit" type="submit">Відправити</button>
         </form><!-- /fs-form -->
     </div><!-- /fs-form-wrap -->
 
-    <!-- Related demos -->
-    <div class="related">
-        <p>If you enjoyed this demo you might also like:</p>
-        <a href="http://tympanus.net/Development/MinimalForm/">
-            <img src="img/relatedposts/minimalform1-300x162.png"/>
-            <h3>Minimal Form Interface</h3>
-        </a>
-        <a href="http://tympanus.net/Development/ButtonComponentMorph/">
-            <img src="img/relatedposts/MorphingButtons-300x162.png"/>
-            <h3>Morphing Buttons Concept</h3>
-        </a>
-    </div>
 
 </div><!-- /container -->
 <script src="/assets/js/classie.js"></script>
