--- a/src/main/resources/templates/e_request/request/show.html
+++ b/src/main/resources/templates/e_request/request/show.html
@@ -49,17 +49,68 @@
 
 					<div class="container__title">
 						<div class="container__title-name">
+							<span>Василь</span>
+
 							<span class="status">розглядається</span>
 						</div>
-
-						<button class="fs-submit">Розгорнути</button>
 					</div>
 
 					<p class="main__container-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
 
-<!--					<div class="main__container-organizators">
-						<span>Організатори:</span>
-					</div>-->
+					<h3>Місце проведення заходу</h3>
+
+					<span>Аудиторія</span>&nbsp;<span>501</span>
+
+					<div class="main__block">
+
+						<form action="" class="main__container-organizators">
+							<span>Куратори:</span>
+
+							<div class="container__form">
+								<select name="teachers" id="">
+									<option value="">Куратори</option>
+								</select>
+							</div>
+
+							<button class="fs-submit">Додати</button>
+						</form>
+
+						<form action="" class="main__container-organizators">
+							<span>Організатори:</span>
+
+							<div class="container__form">
+								<select name="nickname" id="">
+									<option value="">nickname</option>
+								</select>
+							</div>
+
+							<div class="container__form">
+								<label for=""></label>
+								<input type="text" placeholder="Обов'язки">
+							</div>
+
+							<div class="container__form">
+								<label for=""></label>
+								<input type="tel" placeholder="Номер телефону">
+							</div>
+
+							<div class="container__form">
+								<label for=""></label>
+								<input type="text" placeholder="Спеціалізація">
+							</div>
+
+							<div class="container__form">
+								<label for=""></label>
+								<input type="text" placeholder="Кількість годин">
+							</div>
+
+							<button class="fs-submit">Додати</button>
+						</form>
+					</div>
+
+					<img src="/assets/img/telegram.svg" alt="" class="pr">
+					<img src="/assets/img/facebook.svg" alt="" class="pr">
+					<img src="/assets/img/viber.svg" alt="" class="pr">
 				</article>
 			</div>
 		</main>
