--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fullscreen Form Interface</title>
-    <meta name="description"
-          content="Fullscreen Form Interface: A distraction-free form concept with fancy animations"/>
-    <meta name="keywords" content="fullscreen form, css animations, distraction-free, web design"/>
-    <link rel="shortcut icon" href="../favicon.ico">
+    <title>Е-ПОДАННЯ</title>
     <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/demo.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/component.css"/>
@@ -22,13 +18,7 @@
 
     <div class="fs-form-wrap" id="fs-form-wrap">
         <div class="fs-title">
-            <h1>Project Worksheet</h1>
-            <div class="codrops-top">
-                <a class="codrops-icon codrops-icon-prev"
-                   href="http://tympanus.net/Development/NotificationStyles/"><span>Previous Demo</span></a>
-                <a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=19520"><span>Back to the Codrops Article</span></a>
-                <a class="codrops-icon codrops-icon-info" href="#"><span>This is a demo for a fullscreen form</span></a>
-            </div>
+            <h1>E-ПОДАННЯ</h1>
         </div>
         <form id="myform" class="fs-form fs-form-full" autocomplete="off">
             <ol class="fs-fields">
@@ -52,9 +42,9 @@
 						<li data-input-trigger>
 							<label class="fs-field-label fs-anim-upper" for="q3">PR</label>
 							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-								<span><input id="q3b" name="pr" type="checkbox" value="facebook"/><label for="q3b" class="radio-conversion">Facebook</label></span>
-								<span><input id="q3c" name="pr" type="checkbox" value="viber"/><label for="q3c" class="radio-social">Viber</label></span>
-								<span><input id="q3a" name="pr" type="checkbox" value="telegram"/><label for="q3a" class="radio-mobile">Telegram</label></span>
+								<span><input style="opacity: 0" id="q3b" name="pr" type="checkbox" value="facebook"/><label for="q3b" class="radio-conversion">Facebook</label></span>
+								<span><input style="opacity: 0" id="q3c" name="pr" type="checkbox" value="viber"/><label for="q3c" class="radio-social">Viber</label></span>
+								<span><input style="opacity: 0" id="q3a" name="pr" type="checkbox" value="telegram"/><label for="q3a" class="radio-mobile">Telegram</label></span>
 							</div>
 						</li>
 
@@ -99,6 +89,13 @@
 
                     <label class="fs-field-label fs-anim-upper" for="q7c">Очікуваний результат на НаУКМА</label>
                     <textarea class="fs-anim-lower" id="q7c" name="desc" placeholder="Я очікую..."></textarea>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="q7a">Куратор</label>
+                    <select class="cs-select cs-skin-boxes fs-anim-lower">
+                        <option value="" disabled selected>Оберіть куратора</option>
+                        <option value="glybovets" data-class="color-588c75">Глибовець</option>
+                    </select>
                 </li>
             </ol><!-- /fs-fields -->
             <button class="fs-submit" type="submit">Send answers</button>
@@ -204,7 +201,7 @@
 
         new FForm(formWrap, {
             onReview: function () {
-                classie.add(document.body, 'overview'); // for demo purposes only
+                classie.add(document.body, 'overview');
             }
         });
     })();
