one page request done

--- a/src/main/resources/templates/e_request/request/show.html
+++ b/src/main/resources/templates/e_request/request/show.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" style="height: initial">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -57,9 +57,9 @@
 
 					<p class="main__container-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
 
-					<h3>Місце проведення заходу</h3>
-
-					<span>Аудиторія</span>&nbsp;<span>501</span>
+					<div class="main__container-room">
+						<h3>Місце проведення заходу:</h3>&nbsp;<span>Аудиторія номер</span>&nbsp;<span>501</span>
+					</div>
 
 					<div class="main__block">
 
@@ -106,6 +106,19 @@
 
 							<button class="fs-submit">Додати</button>
 						</form>
+					</div>
+
+					<h3>Репетиція</h3>
+					<div class="main__container-repetition">
+
+						<div class="main__container-room">
+							<h3>Місце проведення заходу:</h3>&nbsp;<span>Аудиторія номер</span>&nbsp;<span>501</span>
+						</div>
+
+						<div class="container__timestamp">
+							<span>24/10/18 14:30</span>
+							<span>24/10/18 16:30</span>
+						</div>
 					</div>
 
 					<img src="/assets/img/telegram.svg" alt="" class="pr">
