--- a/src/main/resources/templates/e_request/request/adminShow.html
+++ b/src/main/resources/templates/e_request/request/adminShow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,28 +39,32 @@
     <div class="main__block">
         <article class="main__container">
             <div class="container__title">
-                <h3>Похід за грибами</h3>
+                <h3 th:text="${request.eventName}">Похід за грибами</h3>
 
                 <div class="container__timestamp">
-                    <span>24/10/18 14:30</span>
-                    <span>24/10/18 16:30</span>
+                    <span th:text="${request.startDateTime}">24/10/18 14:30</span>
+                    <span th:text="${request.finishDateTime}">24/10/18 16:30</span>
                 </div>
             </div>
 
             <div class="container__title">
                 <div class="container__title-name">
-                    <span class="status">розглядається</span>
+                    <span class="status" th:text="${request.currentStatus}">розглядається</span>
                 </div>
 
                 <button class="fs-submit">Розгорнути</button>
             </div>
+            <p class="main__container-text" th:text="${request.purpose}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
 
-            <p class="main__container-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
+            <p class="main__container-text" th:text="${request.expectedResult}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium assumenda commodi cum cumque delectus doloremque dolores dolorum ea eligendi enim esse excepturi explicabo fugiat inventore ipsam labore magnam maxime minima nam, natus nemo neque nihil possimus quibusdam ratione reiciendis rem repellat sapiente sint voluptatem! Earum facilis iure molestiae nisi perferendis.</p>
 
             <!--					<div class="main__container-organizators">
                                     <span>Організатори:</span>
                                 </div>-->
-            <button>Accept</button>
+            <form action="/e_request/admin/applyRequest" method="post">
+                <input style="display: none" name="request_id" th:value="${request.id}">
+                <input type="submit" value="Accept">
+            </form>
             <button>Decline</button>
         </article>
     </div>
