--- a/src/main/resources/templates/e_request/request/show.html
+++ b/src/main/resources/templates/e_request/request/show.html
@@ -63,45 +63,45 @@
 
 					<div class="main__block">
 
-						<form action="" class="main__container-organizators">
+						<form action="" class="main__container-organizators" th:if="${request.getCurrentStatus().equals(T(ua.edu.ukma.e_request.resources.enums.RequestStatus).NEW)}">
 							<span>Куратори:</span>
 
 							<div class="container__form">
-								<select name="teachers" id="">
-									<option value="">Куратори</option>
+								<select name="teachers">
+									<option value="" th:each="student:${assignableMentors}" th:text="${student.getUsername()}" th:value="${student.getId()}">Куратори</option>
 								</select>
 							</div>
 
 							<button class="fs-submit">Додати</button>
 						</form>
 
-						<form action="" class="main__container-organizators">
+						<form action="/e_request/requests/assignToTeam" method="post" class="main__container-organizators">
 							<span>Організатори:</span>
-
+							<input type="hidden" th:value="${request.id}" name="requestId">
 							<div class="container__form">
-								<select name="nickname" id="">
-									<option value="">nickname</option>
+								<select name="userId">
+									<option value="" th:each="student:${assignableUsers}" th:text="${student.getUsername()}" th:value="${student.getId()}">Куратори</option>
 								</select>
 							</div>
 
 							<div class="container__form">
 								<label for=""></label>
-								<input type="text" placeholder="Обов'язки">
+								<input type="text" name="responsibility" placeholder="Обов'язки">
 							</div>
 
 							<div class="container__form">
 								<label for=""></label>
-								<input type="tel" placeholder="Номер телефону">
+								<input type="tel" name="phone" placeholder="Номер телефону">
 							</div>
 
 							<div class="container__form">
 								<label for=""></label>
-								<input type="text" placeholder="Спеціалізація">
+								<input type="text" name="specialization" placeholder="Спеціалізація">
 							</div>
 
 							<div class="container__form">
 								<label for=""></label>
-								<input type="text" placeholder="Кількість годин">
+								<input type="number" name="hours" step="0.1" min="0.1" placeholder="Кількість годин">
 							</div>
 
 							<button class="fs-submit">Додати</button>
