--- a/src/main/resources/templates/e_request/view/uploadfile.html
+++ b/src/main/resources/templates/e_request/view/uploadfile.html
@@ -9,7 +9,7 @@
     <input type="file" name="file" accept="application/msword, text/plain">
     <input type="number" name="userId">
     <input type="number" name="eventId">
-    <input type="submit">
+    <button class="fs-submit">Submit</button>
 </form>
 </body>
 </html>
