--- a/src/main/resources/static/css/component.css
+++ b/src/main/resources/static/css/component.css
@@ -659,6 +659,7 @@ button.fs-continue {
 	border-radius: 40px;
 	font-weight: 700;
 	color: rgba(0,0,0,0.4);
+	outline:none;
 
 	transition: color .3s ease, background-color .3s ease;
 }
@@ -937,13 +938,38 @@ button.fs-continue:hover {
 	border-bottom: 2px solid #3b3f45;
 }
 
-.container__form input {
+.container__form input,
+.container__form textarea{
 	width: 100%;
 	padding: .625em;
 	border: none;
 	outline: none;
 	border-bottom: 2px solid #3b3f45;
 	background-color: transparent;
+}
+
+.container__form textarea {
+	max-width: 100%;
+	max-height: 200px;
+	min-height: 100px;
+}
+
+.main__container-list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.input__upload {
+	padding: .625em;
+	background: #ccc;
+	border: none;
+	border-radius: 20px;
+	padding-left: .938em;
+}
+
+.main__container-list ul {
+	width: 20%;
+	list-style-type: disc;
 }
 
 .main__container-repetition {
