--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -30,13 +30,13 @@
                 <li>
                     <div>
                         <label class="fs-field-label fs-anim-upper" for="q2">Дата початку заходу</label>
-                        <input class="fs-anim-lower" id="q2" name="dateFrom" type="text" placeholder="23/10/18 12:30"
+                        <input class="fs-anim-lower" id="q2" name="dateFrom" type="text" pattern="dd/MM/yyyy HH:mm" placeholder="23/10/18 12:30"
                                required/>
                     </div>
 
                             <div>
 								<label class="fs-field-label fs-anim-upper" for="q2-2">Дата кінця заходу</label>
-								<input class="fs-anim-lower" id="q2-2" name="dateTo" type="text" placeholder="24/10/18 14:30" required/>
+								<input class="fs-anim-lower" id="q2-2" name="dateTo" type="text" pattern="dd/MM/yyyy HH:mm" placeholder="24/10/18 14:30" required/>
 							</div>
 						</li>
 						<li data-input-trigger>
@@ -174,13 +174,13 @@
 
             containerDates.innerHTML = "<div>\n" +
                 "<label class=\"fs-field-label fs-anim-upper\" for=\"q2\">Дата початку репетиції</label>\n" +
-                "<input class=\"fs-anim-lower\" id=\"prepDateFrom\" name=\"prepDateFrom\" type=\"text\" placeholder=\"23/10/18 12:30\"\n" +
+                "<input class=\"fs-anim-lower\" id=\"prepDateFrom\" name=\"prepDateFrom\" type=\"text\" pattern='dd/MM/yyyy HH:mm' placeholder=\"23/10/18 12:30\"\n" +
                 "required/>\n" +
                 "</div>\n" +
                 "\n" +
                 "<div>\n" +
                 "\t\t\t\t\t\t\t\t<label class=\"fs-field-label fs-anim-upper\" for=\"q2-2\">Дата кінця репетиції</label>\n" +
-                "\t\t\t\t\t\t\t\t<input class=\"fs-anim-lower\" id=\"prepDateTo\" name=\"prepDateTo\" type=\"text\" placeholder=\"24/10/18 14:30\" required/>\n" +
+                "\t\t\t\t\t\t\t\t<input class=\"fs-anim-lower\" id=\"prepDateTo\" name=\"prepDateTo\" type=\"text\" pattern='dd/MM/yyyy HH:mm' placeholder=\"24/10/18 14:30\" required/>\n" +
                 "\t\t\t\t\t\t\t</div>";
 
             var pickerPrepFrom = new Picker(document.getElementById('prepDateFrom'), {
