--- a/src/main/resources/templates/e_request/creation/create_request.html
+++ b/src/main/resources/templates/e_request/creation/create_request.html
@@ -16,6 +16,14 @@
 <body>
 <div class="container">
 
+    <!-- All hidden elements to use later-->
+    <div style="display: none">
+        <select id="room"><option>ROOM</option></select>
+        <select id="kmc"><option>KMC</option></select>
+        <select id="library"><option>LIBRARY</option></select>
+        <select id="museum"><option>MUSEUM</option></select>
+    </div>
+
     <div class="fs-form-wrap" id="fs-form-wrap">
         <div class="fs-title">
             <h1>E-ПОДАННЯ</h1>
@@ -51,10 +59,10 @@
 						<li data-input-trigger>
 							<label for="q4" class="fs-field-label fs-anim-upper"></label>
 							<div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-								<span><input id="q3d" name="location" type="radio" onclick="chooseRoom(true)" value="room"/><label for="q3d" class="radio-room">Корпус/Аудиторія</label></span>
-								<span><input id="q3e" name="location" type="radio" onclick="chooseRoom(false)" value="kmc"/><label for="q3e" class="radio-art">КМЦ</label></span>
-								<span><input id="q3f" name="location" type="radio" onclick="chooseRoom(false)" value="library"/><label for="q3f" class="radio-library">Наукова бібліотека</label></span>
-								<span><input id="q3g" name="location" type="radio" onclick="chooseRoom(false)" value="museum"/><label for="q3g" class="radio-museum">Музей</label></span>
+								<span><input id="q3d" name="location" type="radio" onclick="chooseRoom('room')" value="room"/><label for="q3d" class="radio-room">Корпус/Аудиторія</label></span>
+								<span><input id="q3e" name="location" type="radio" onclick="chooseRoom('kmc')" value="kmc"/><label for="q3e" class="radio-art">КМЦ</label></span>
+								<span><input id="q3f" name="location" type="radio" onclick="chooseRoom('library')" value="library"/><label for="q3f" class="radio-library">Наукова бібліотека</label></span>
+								<span><input id="q3g" name="location" type="radio" onclick="chooseRoom('museum')" value="museum"/><label for="q3g" class="radio-museum">Музей</label></span>
 							</div>
                             <div class="fs-anim-lower" id="room-container">
 
@@ -146,13 +154,18 @@
     function chooseRoom(checked) {
         const container = document.getElementById('room-container');
 
-        container.innerHTML = "<label class=\"fs-field-label fs-anim-upper\" for=\"q2\">Номер аудиторії</label>\n" +
-            "<input class=\"fs-anim-lower\" id=\"q2\" name=\"room\" type=\"text\" placeholder=\"1-223\"\n" +
-            "required/>";
+        const availableRooms = document.getElementById(checked).cloneNode(true);
+        availableRooms.name='room';
+
+        container.innerHTML = "<label class=\"fs-field-label fs-anim-upper\" for=\"q2\">Номер аудиторії</label>\n";
+        container.append(availableRooms);
     }
 
     function chooseRoomRepetition(checked) {
         const container = document.getElementById('room-container-repetition');
+        console.log(checked);
+
+        const availableRooms = document.getElementById('');
 
         container.innerHTML = "<label class=\"fs-field-label fs-anim-upper\" for=\"q2\">Номер аудиторії</label>\n" +
             "<input class=\"fs-anim-lower\" id=\"q2\" name=\"prepRoom\" type=\"text\" placeholder=\"1-223\"\n" +
